Bug 1440252 - Implement MediaEngineWebRTCMicrophoneSource::GetSettings. r=padenot

MozReview-Commit-ID: IVbax9Xxs8R